<resources>
    <string name="app_name">To Do Lists</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="logout">Log Out</string>
    <string name="google_login">or Log In with</string>
    <string name="placeholderUsername">Enter username</string>
    <string name="placeholderEmail">Enter email</string>
    <string name="placeholderPassword">Enter password</string>
    <string name="profile">Profile</string>
    <string name="server_client_id">966236940536-vml2u0i3pr5m168nlct2dmplok2nsu6s.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>